--- a/package.json
+++ b/package.json
@@ -15,8 +15,9 @@
     "gulp": "3.9.1",
     "gulp-changed": "1.3.2",
     "gulp-sass": "3.1.0",
+    "memcache-plus": "^0.2.18",
+    "moment": "^2.22.1",
     "nodemon": "1.11.0",
-    "nunjucks": "3.0.1",
-    "memcache-plus": "^0.2.18"
+    "nunjucks": "3.0.1"
   }
 }
